--- a/Makefile.am
+++ b/Makefile.am
@@ -2,4 +2,5 @@
 # have all needed files, that a GNU package needs
 # AUTOMAKE_OPTIONS = foreign 1.4
 
-SUBDIRS = src doc
+SUBDIRS = src doc dtdcoder
+
