First implementation with input charset convertion
To be done:
- Needs to be integrated with appropriate command line parameters.
- The output has to be converted also into the output charset.
- In some cases (the input charset is already ASCII compatible), it
might not be necessary the conversion into UTF-8.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,6 +1,6 @@
 bin_PROGRAMS = html2xhtml dtdquery
 html2xhtml_SOURCES = dtd.c dtd_names.c dtd_util.c htmlgr.y html.l html2xhtml.c \
-	mensajes.c procesador.c tree.c xchar.c
+	mensajes.c procesador.c tree.c xchar.c charset.c
 dtdquery_SOURCES = dtdquery.c tree.c dtd.c dtd_names.c dtd_util.c xchar.c mensajes.c
 
 # set the include path found by configure
@@ -9,7 +9,7 @@ INCLUDES= $(all_includes)
 # the library search path.
 html2xhtml_LDFLAGS = $(all_libraries) 
 noinst_HEADERS = dtd.h dtd_names.h dtd_types.h dtd_util.h \
-	mensajes.h procesador.h tree.h xchar.h htmlgr.h
+	mensajes.h procesador.h tree.h xchar.h htmlgr.h charset.h
 
 AM_YFLAGS = -d
 
