Charset aliases system: first version.
Charsets lists from IANA and iconv are merged and used by html2xhtml
to select the appropriate alias for each encoding.
First complete version, more testing required.

--- a/Makefile.am
+++ b/Makefile.am
@@ -2,5 +2,5 @@
 # have all needed files, that a GNU package needs
 # AUTOMAKE_OPTIONS = foreign 1.4
 
-SUBDIRS = src doc dtdcoder
+SUBDIRS = src doc dtdcoder charset_coder
 
