--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,6 +1,7 @@
 bin_PROGRAMS = html2xhtml dtdquery
 html2xhtml_SOURCES = dtd.c dtd_names.c dtd_util.c htmlgr.y html.l html2xhtml.c \
-	mensajes.c procesador.c tree.c xchar.c charset.c cgi.c params.c
+	mensajes.c procesador.c tree.c xchar.c charset.c cgi.c params.c \
+	charset_aliases.c
 dtdquery_SOURCES = dtdquery.c tree.c dtd.c dtd_names.c dtd_util.c xchar.c \
 	mensajes.c
 
@@ -11,7 +12,7 @@ INCLUDES= $(all_includes)
 html2xhtml_LDFLAGS = $(all_libraries) 
 noinst_HEADERS = dtd.h dtd_names.h dtd_types.h dtd_util.h \
 	mensajes.h procesador.h tree.h xchar.h htmlgr.h charset.h cgi.h \
-	params.h
+	params.h charset.h charset_aliases.h
 
 AM_YFLAGS = -d
 
