--- a/configure.in
+++ b/configure.in
@@ -11,6 +11,7 @@ AC_PROG_CC
 AM_PROG_LIBTOOL
 AM_PROG_LEX
 AC_PROG_YACC
+AM_ICONV
 
 # Checks for header files.
 AC_FUNC_ALLOCA
@@ -24,7 +25,7 @@ AC_TYPE_SIZE_T
 # Checks for library functions.
 AC_FUNC_MALLOC
 AC_FUNC_REALLOC
-AC_CHECK_FUNCS([strcasecmp strstr])
+AC_CHECK_FUNCS([strcasecmp strstr memmem])
 
 AC_CONFIG_FILES([Makefile src/Makefile doc/Makefile dtdcoder/Makefile charset_coder/Makefile tests/Makefile])
 AC_OUTPUT
