--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -10,6 +10,7 @@ INCLUDES= $(all_includes)
 
 # the library search path.
 html2xhtml_LDFLAGS = $(all_libraries) 
+html2xhtml_LDADD = @LIBICONV@
 noinst_HEADERS = dtd.h dtd_names.h dtd_types.h dtd_util.h \
 	mensajes.h procesador.h tree.h xchar.h htmlgr.h charset.h cgi.h \
 	params.h charset.h charset_aliases.h
