Improved documentation system.
Now information on how to run the program is centralized in the
man page. The text file doc/html2xhtml.txt is automatically produced
from it and distributed along with the source code.

--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -1,7 +1,11 @@
 man_MANS = html2xhtml.1
 
-EXTRA_DIST = $(man_MANS)
+EXTRA_DIST = $(man_MANS) html2xhtml.txt
+CLEANFILES = html2xhtml.txt
 
-all:
-	true
+all: html2xhtml.txt
+
+html2xhtml.txt: html2xhtml.1
+	man -l html2xhtml.1 >html2xhtml.txt
+
 
