DTDCoder now downloads DTD with a modified User-Agent header.
The objective is to avoid W3C blocking requests.

--- a/dtdcoder/Makefile.am
+++ b/dtdcoder/Makefile.am
@@ -5,7 +5,7 @@
 #noinst_java_JAVA = DTDCoder.java DTDDeclHandler.java
 #JAVAROOT = .
 
-DTD_SRC = DTDCoder.java DTDDeclHandler.java
+DTD_SRC = DTDCoder.java DTDDeclHandler.java XHTMLEntityResolver.java
 DTDLIB_DEST = ../src
 DTD_TEMPLATES = template-transitional.xhtml template-strict.xhtml \
 	template-frameset.xhtml template-11.xhtml \
