Integrated a C99-compliant portable version of vsnprintf.
Superseedes the previous fix for the vsnprintf problem. Used only in
environments with a non C99 compliant version and integrated in
autoconf. Implementation taken from http://www.ijs.si/software/snprintf/

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,7 +1,7 @@
 bin_PROGRAMS = html2xhtml dtdquery
 html2xhtml_SOURCES = dtd.c dtd_names.c dtd_util.c htmlgr.y html.l html2xhtml.c \
 	mensajes.c procesador.c tree.c xchar.c charset.c cgi.c params.c \
-	charset_aliases.c
+	charset_aliases.c snprintf.c
 dtdquery_SOURCES = dtdquery.c tree.c dtd.c dtd_names.c dtd_util.c xchar.c \
 	mensajes.c
 
@@ -13,7 +13,7 @@ html2xhtml_LDFLAGS = $(all_libraries)
 html2xhtml_LDADD = @LIBICONV@
 noinst_HEADERS = dtd.h dtd_names.h dtd_types.h dtd_util.h \
 	mensajes.h procesador.h tree.h xchar.h htmlgr.h charset.h cgi.h \
-	params.h charset.h charset_aliases.h
+	params.h charset.h charset_aliases.h snprintf.h
 
 AM_YFLAGS = -d
 
