--- a/configure.in
+++ b/configure.in
@@ -28,5 +28,8 @@ AC_FUNC_MALLOC
 AC_FUNC_REALLOC
 AC_CHECK_FUNCS([strcasecmp strstr memmem])
 
+# Avail. at http://www.gnu.org/software/autoconf-archive/ax_func_snprintf.html
+AX_FUNC_SNPRINTF
+
 AC_CONFIG_FILES([Makefile src/Makefile doc/Makefile dtdcoder/Makefile charset_coder/Makefile tests/Makefile])
 AC_OUTPUT
